# drone-swarms

./: LICENSE  README.md  drone.py  main.py  pyproject.toml  visualizer.py
ai/: behavior_algorithm.py  behavior_manager.py  collision_avoidance.py  consensus.py  formation_control.py
behaviors/: collision_avoidance_algorithm.py  consensus_algorithm.py  flocking_behavior_algorithm.py  formation_control_algorithm.py
config/: logging_config.py  sim_config.py
core/: battery.py  communication.py  drone.py  motor.py
simulation/: event_manager.py  swarm_simulation.py
tests/ai/: test_behavior_manager.py  test_collision_avoidance.py  test_consensus.py  test_formation_control.py
tests/core/: test_battery.py  test_communication.py  test_drone.py  test_motor.py
tests/simulation/: test_event_manager.py  test_sim_config.py  test_swarm_simulation.py
tests/visualization/: test_color_manager.py  test_swarm_visualizer.py
visualization/: color_manager.py  swarm_visualizer.py  ui_controller.py
