[tool.poetry]
name = "drone-swarms"
version = "0.3.0"
description = "A Python-based drone swarm simulator with real-time 3D visualization."
authors = ["jeanjerome <jeanjerome.levy@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
code2flow = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"